@@ -16,7 +16,6 @@ e.4.x:
 - only copy/paste entries with keyboard shortcut when tree has focus
   (ctrl-c should copy selected label in dataview when focused)
 - bugfix: crash when gnome icon theme is missing or not configured
-- option to edit instead of run on doubleclick
 - bugfix: gnome.libgnome_module_info_get() removed in new gnome-python
 - clean up the build-system
 - examine drag/drop undo/redo crashes
