@@ -113,6 +113,7 @@ class Config(object):
 			self.get("launcher/website")
 			self.get("view/searchbar")
 			self.get("clipboard/chain_username")
+			self.get("behavior/doubleclick")
 
 		except ConfigError:
 			return False
