@@ -5,6 +5,7 @@ New features:
 - check password strength while entering, using cracklib
 - option to autolock file after a period of inactivity
 - ask user to reload file if it is changed outside revelation
+- added preference to select doubleclick action; go to, or edit
 - improve user interface for copying passwords (and optionally
   usernames) to the clipboard
 
