@@ -2,12 +2,14 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.1 ]---------------
 
-2005-03-16  Erik Grinaker <erikg@codepoet.no>
+2005-03-17  Erik Grinaker <erikg@codepoet.no>
 
 	* fix potential crash on quit with some pygtk versions
 
 	* improve the user interface for copying username/password
 	to clipboard
+
+	* added preference to select doubleclick action; go to, or edit
 
 2005-03-16  Erik Grinaker <erikg@codepoet.no>
 
